# procedural_wood_texture

./: .gitignore  .gitmodules  README.md  render_cuboid.py  scrap.py  test_diffwood.py
COMMON/: draw_utils.py  procedural_wood_fragment_shader.frag  render_utils.py  shader_utils.py
diffwood/: CMakeLists.txt  __init__.py  cuda.py  noise.py  test.py
diffwood/src/: CMakeLists.txt  common.h  diffwood.cpp  diffwood.h  main.cpp  noise.cpp  noise.h  test.cpp  thread.h
diffwood/src/cuda/: CMakeLists.txt  add.cu  common.cuh  noise.cu
